# esteid-browser-plugin

./: AUTHORS  Base64.cpp  Base64.h  CMakeLists.txt  CallbackAPI.cpp  CallbackAPI.h  CardService.cpp  CardService.h  CertificateAPI.cpp  CertificateAPI.h  CompatAPIs.cpp  CompatAPIs.h  EIDCompatControl.h  EIDCompatControl.idl  EIDCompatControl.rc  EIDCompatControl.rgs  EIDCompatControl_res.h  EstEIDNotificationBar.js  EstEIDService.cpp  EstEIDService.h  EsteidAPI.cpp  EsteidAPI.h  EsteidPlugin.cpp  EsteidPlugin.h  FBControl.rgs  Factory.cpp  FactoryMain.cpp  FireBreathWin.idl  JSUtil.h  NEWS  PersonalDataAPI.cpp  PersonalDataAPI.h  PluginConfig.cmake  PluginSettings.cpp  PluginSettings.h  PluginUI.cpp  PluginUI.h  README  TestEsteidNotificationBarJS.html  X509Certificate.cpp  (+19 more)
Mac/: FactoryMainMac.cpp  MacPINPanel.h  MacPINPanel.m  MacPINPanelDelegate.h  MacSettingsPanel.h  MacSettingsPanel.m  MacUI.h  MacUI.mm  MacUIPanel.h  MacUIPrivate.h  MacUIPrivate.m  MacUIPrivate.mm  np_macmain.cpp  projectDef.cmake
Mac/bundle_template/: Info.plist  Localized.r
Mac/bundle_template/English.lproj/: Localizable.strings
Mac/bundle_template/Estonian.lproj/: Localizable.strings
Mac/bundle_template/PINPanel.nib/: designable.nib  keyedobjects.nib
Mac/bundle_template/Russian.lproj/: Localizable.strings
Mac/bundle_template/SettingsPanel.nib/: designable.nib  keyedobjects.nib
Mozilla/: CMakeLists.txt  MozillaUI.cpp  MozillaUI.h  chrome.manifest  esteid-prefs.js.in  install.rdf.in  run-in-ff.sh  run-in-tb.sh
Mozilla/chrome/content/: browser.xul  config.js  convertLegacy.js  esteid.js  mail.xul  prefs.js  prefs.xul  sebHack.js  signdetails.js  signdetails.xul  signprompt.js  signprompt.xul
Mozilla/chrome/locale/en-US/: esteid.dtd  esteid.properties
Mozilla/chrome/locale/et-EE/: esteid.dtd  esteid.properties
Mozilla/chrome/locale/ru-RU/: esteid.dtd  esteid.properties
Mozilla/chrome/modules/: global.jsm
Mozilla/chrome/skin/: esteid.css
Mozilla/components/: OldJavaBlocker.js  nsEstEIDPrivate.js  nsIEstEIDPrivate.idl
Mozilla/defaults/preferences/: defaults.js
Safari/: Info.plist  Settings.plist  convertLegacy.js  end.js  global.html  start.js
Win/: FactoryMainWin.cpp  WindowsUI.cpp  WindowsUI.h  basedialog.cpp  basedialog.h  dllmain.cpp  np_winmain.cpp  pinDialog.cpp  pinDialog.h  pinDialog.rc  pinDialog_res.h  pininputdialog.cpp  pininputdialog.h  pininputdialog.rc  pininputdialog_res.h  pinpaddialog.cpp  pinpaddialog.h  pinpaddialog.rc  pinpaddialog_res.h  projectDef.cmake  registry.cpp  registry.h  whitelistdialog.cpp  whitelistdialog.h  whitelistdialog.rc  whitelistdialog_res.h
Win/WiX/: esteidInstaller.wxs
Win/patches/: firebreath-doubleretain.patch  firebreath-nohardcodedx86.patch  firebreath-oldactivex.patch  firebreath-preapproved.patch  firebreath-rc.patch  firebreath-secure-scl.patch
Win/test/: CMakeLists.txt  main.cpp  test.rc  testpininput.cpp  testwhitelist.cpp
X11/: FactoryMainX11.cpp  GtkUI.cpp  GtkUI.h  basepindialog.cpp  basepindialog.h  esteid_version_script.txt  np_x11main.cpp  pinentry.cpp  pinentry.h  pininput.cpp  pininput.h  pininputdialog.cpp  pininputdialog.h  pininputdialog.ui  pinpaddialog.cpp  pinpaddialog.h  pinpaddialog.ui  projectDef.cmake  whitelist.glade  whitelistdialog.cpp  whitelistdialog.h  whitelistdialog.ui
X11/test/: Makefile  main.cpp  testgtkui.cpp  testgtkui.h
patches/: firebreath-evaluateJavaScript.patch
po/: README  esteid-browser-plugin.pot  et.po
po/et_EE/LC_MESSAGES/: esteid-browser-plugin.mo
testpage/: test.css  test.html  test.js
